force-app/src/objects/Billing_Contract_Line__c.object
<CustomObject>
    <fields>
        <fullName>Accreditation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Accreditation</label>
        <referenceTo>Accreditation__c</referenceTo>
        <relationshipLabel>Billing Contract Lines</relationshipLabel>
        <relationshipName>Billing_Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_frequency__c</fullName>
        <label>Billing frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One-off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Contract__r.Start_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Billing_Contract__c</referenceTo>
        <relationshipLabel>Billing Contract Lines</relationshipLabel>
        <relationshipName>Billing_Contract_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dimension3Id__c</fullName>
        <formula>Contract__r.Account__r.c2g__CODADimension3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimension3Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Billing Contract Lines</relationshipLabel>
        <relationshipName>Billing_Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Billing Contract Lines</relationshipLabel>
        <relationshipName>Billing_Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Billing Contract Lines</relationshipLabel>
        <relationshipName>Billing_Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Income_ScheduleId__c</fullName>
        <formula>Product__r.c2g__CODAIncomeSchedule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income ScheduleId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_description__c</fullName>
        <label>Line description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Billing Contract Lines</relationshipLabel>
        <relationshipName>Billing_Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_installments__c</fullName>
        <formula>CASE(
TEXT(Billing_frequency__c),
&apos;Monthly&apos;, CEILING(Contract__r.Duration__c),
&apos;Quarterly&apos;, CEILING(Contract__r.Duration__c/3),
&apos;Yearly&apos;, CEILING(Contract__r.Duration__c/12),
&apos;One-off&apos;, CEILING(Contract__r.Duration__c/12),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Billing Contract Lines</relationshipLabel>
        <relationshipName>Billing_Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice Line Item</label>
        <referenceTo>c2g__codaInvoiceLineItem__c</referenceTo>
        <relationshipLabel>Billing Contract Lines</relationshipLabel>
        <relationshipName>Billing_Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_price__c</fullName>
        <label>Sales price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_CodeId__c</fullName>
        <formula>IF(

(ISPICKVAL( Contract__r.Account__r.c2g__CODAVATStatus__c, &quot;Home&quot;) ||


ISPICKVAL( Contract__r.Account__r.c2g__CODAVATStatus__c, &quot;EC Non-registered&quot;)) ,



  Product__r.c2g__CODATaxCode__c ,  Contract__r.Account__r.c2g__CODAOutputVATCode__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax CodeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Billing Contract Lines</relationshipLabel>
        <relationshipName>Billing_Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_amount_per_installment__c</fullName>
        <description>Total amount for the total project length</description>
        <formula>CASE( 
TEXT( Contract__r.Schedule_type__c ), 
&apos;Multiply By&apos;, Quantity__c * Sales_price__c, 
&apos;Divide By&apos;, Quantity__c * Sales_price__c / Number_of_installments__c,
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount for the total project length</inlineHelpText>
        <label>Total amount per installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_contract_line_value__c</fullName>
        <formula>CASE( 
TEXT( Contract__r.Schedule_type__c ), 
&apos;Multiply By&apos;, Quantity__c * Sales_price__c * Number_of_installments__c, 
&apos;Divide By&apos;, Quantity__c * Sales_price__c,
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total contract line value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Billing Contract Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BCL{000000}</displayFormat>
        <label>Billing Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>